plugins {
    id 'java'
    id 'jacoco'
    id 'org.springframework.boot' version '3.2.3'
    id 'io.spring.dependency-management' version '1.1.4'
    id "org.sonarqube" version "7.2.3.7755"
    id "org.springdoc.openapi-gradle-plugin" version "1.8.0"
}

sonar {
    properties {
        property 'sonar.projectKey', 'GorkaVillalba_ProyectoProcesosSoftware'
        property 'sonar.organization', 'gorkavillalba'
        property 'sonar.host.url', 'https://sonarcloud.io'
        property 'sonar.projectName', 'EventPass'
        property 'sonar.coverage.jacoco.xmlReportPaths', 'build/reports/jacoco/test/jacocoTestReport.xml'
        property 'sonar.coverage.exclusions', '**/ProyectoApplication.*,**/config/**,**/dto/**,**/exception/**,**/security/**,**/model/**'
    }
}

tasks.named('sonar') {
    dependsOn test, jacocoTestReport
}

group = 'com.proyectoprocesossoftware'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

// ──────────────────────────────────────────────────────────────
// T-24: Source sets separados para integración y rendimiento
// ──────────────────────────────────────────────────────────────
sourceSets {
    integrationTest {
        java.srcDir 'src/integrationTest/java'
        resources.srcDir 'src/integrationTest/resources'
        compileClasspath += sourceSets.main.output + sourceSets.test.output
        runtimeClasspath += sourceSets.main.output + sourceSets.test.output
    }
    performanceTest {
        java.srcDir 'src/performanceTest/java'
        resources.srcDir 'src/performanceTest/resources'
        compileClasspath += sourceSets.main.output + sourceSets.test.output
        runtimeClasspath += sourceSets.main.output + sourceSets.test.output
    }
}

configurations {
    integrationTestImplementation.extendsFrom testImplementation
    integrationTestRuntimeOnly.extendsFrom testRuntimeOnly
    integrationTestCompileOnly.extendsFrom compileOnly
    integrationTestAnnotationProcessor.extendsFrom annotationProcessor

    performanceTestImplementation.extendsFrom testImplementation
    performanceTestRuntimeOnly.extendsFrom testRuntimeOnly
    performanceTestCompileOnly.extendsFrom compileOnly
    performanceTestAnnotationProcessor.extendsFrom annotationProcessor
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    runtimeOnly 'com.h2database:h2'
    runtimeOnly 'com.mysql:mysql-connector-j'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
}

// ──────────────────────────────────────────────────────────────
// T-24: `./gradlew test` ejecuta solo tests unitarios (*Test.java)
// ──────────────────────────────────────────────────────────────
tasks.named('test') {
    useJUnitPlatform()
    include '**/*Test.class'
    exclude '**/*IT.class', '**/*PerfTest.class'
    finalizedBy jacocoTestReport
}

// ──────────────────────────────────────────────────────────────
// T-24: `./gradlew integrationTest` ejecuta solo *IT.java
// ──────────────────────────────────────────────────────────────
tasks.register('integrationTest', Test) {
    description = 'Runs integration tests (src/integrationTest, *IT.java).'
    group = 'verification'
    useJUnitPlatform()
    testClassesDirs = sourceSets.integrationTest.output.classesDirs
    classpath = sourceSets.integrationTest.runtimeClasspath
    include '**/*IT.class'
    shouldRunAfter tasks.named('test')
    systemProperty 'spring.profiles.active', 'dev'
}

// ──────────────────────────────────────────────────────────────
// T-24: `./gradlew performanceTest` ejecuta solo *PerfTest.java
// ──────────────────────────────────────────────────────────────
tasks.register('performanceTest', Test) {
    description = 'Runs performance tests (src/performanceTest, *PerfTest.java).'
    group = 'verification'
    useJUnitPlatform()
    testClassesDirs = sourceSets.performanceTest.output.classesDirs
    classpath = sourceSets.performanceTest.runtimeClasspath
    include '**/*PerfTest.class'
    shouldRunAfter tasks.named('integrationTest')
    systemProperty 'spring.profiles.active', 'dev'
}

jacoco {
    toolVersion = "0.8.11"
}

def jacocoExcludes = [
    '**/ProyectoApplication.*',
    '**/config/**',
    '**/dto/**',
    '**/exception/**',
    '**/security/**',
    '**/model/**'
]

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        html.required = true
        csv.required = false
    }
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: jacocoExcludes)
        }))
    }
}

jacocoTestCoverageVerification {
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: jacocoExcludes)
        }))
    }
    violationRules {
        rule {
            element = 'BUNDLE'
            limit {
                counter = 'LINE'
                value = 'COVEREDRATIO'
                minimum = 0.9
            }
        }
    }
}
// ──────────────────────────────────────────────────────────────
// T-30.7: Configuración del plugin springdoc-openapi
// Genera build/openapi.json al ejecutar `./gradlew generateOpenApiDocs`
// ──────────────────────────────────────────────────────────────
openApi {
    apiDocsUrl.set("http://localhost:8080/v3/api-docs")
    outputDir.set(file("$buildDir"))
    outputFileName.set("openapi.json")
    waitTimeInSeconds.set(60)
}
// ──────────────────────────────────────────────────────────────
// T-29.1: Configurar tarea javadoc con encoding UTF-8
// ──────────────────────────────────────────────────────────────
javadoc {
    destinationDir = layout.buildDirectory.dir("docs/javadoc").get().asFile
    options.encoding = 'UTF-8'
    options.docEncoding = 'UTF-8'
    options.charSet = 'UTF-8'
    options.addStringOption('Xdoclint:none', '-quiet')
    failOnError = false
}